# SCRAP

./: .gitignore  Dockerfile  MAKEFILE  setup.cfg  setup.py
.github/workflows/: ci.yml
