[metadata]
name = scrap_credit_risk_pipeline
version = 0.1.0
author = Kaushal Choudhary
author_email = kaushalc64@gmail.com
description = Smart Credit Risk Analysis Pipeline using PySpark, GCP, and Databricks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaushal07wick/SCRAP
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pyspark
    pandas
    numpy
    scikit-learn
    sqlalchemy
    great-expectations
    streamlit
    apache-airflow
    google-cloud-storage
python_requires = >=3.8
